--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
-<!--------------------------------------------------------------------导航开始------------------------------------------------------------------------------->
+<!--------------------------------------导航开始----------------------------------------------->
 <!------顶部彩色图-------->
 <div class="header1"></div>
 <!------导航第一板块------>
@@ -223,14 +223,48 @@
      </div>
    </div>
 </div>
-
-<!-----------------------------------------------------------------------导航结束------------------------------------------------------------------------------->
-
+<!----------------------------------导航结束----------------------------------------------->
 
 
 
+<!----------------------------------全部商品分类代码开始------------------------------------->
+<div class="tea1_div">
+ <div class="tea1_div1">
+  <dl id="tea1a">
+   <dt>
+    <span>全部商品分类</span>
+    <span>▼</span>
+   </dt>
+   <dd>
+    <ul>
+     <li>食品</li>
+     <li>服装</li>
+    </ul>
+   </dd>
+  </dl>
+  <dl id="tea1b">
+   <a href="#"><dt>精彩推荐专区</dt></a>
+   <a href="#"><dt>产地直送</dt></a>
+   <a href="#"><dt>美食馆</dt></a>
+   <a href="#"><dt>服装城</dt></a>
+   <a href="#"><dt>养生馆</dt></a>
+   <a href="#"><dt>精彩回购</dt></a>
+  </dl>
+  <dl id="tea1c">
+   <a href="#">
+    <dt><img src="images/tea1.gif"/></dt>
+    <dt><i>手机下单</i></dt>
+    <dt><i>更精彩</i></dt>
+   </a>
+  </dl>
+ </div>
+</div>
+<!-------------------------------------全部商品分类代码结束--------------------------------------------->
 
-<!----------------------------------------栏目区------------------------------------------->
+
+
+
+<!-------------------------------------------栏目区--------------------------------------------------->
 
 <div class="jllb_div1">
 
@@ -282,7 +316,7 @@
 
 
 
-<!---------------------------耍大牌代码块---------------------->
+<!-------------------------------------------耍大牌代码块--------------------------------------->
 
     <div class="jl_div1">
      <div class="jl_div10">
@@ -394,7 +428,7 @@
      </div>
     </div>
 
-
+<!-------------------------------------------耍大牌代码块结束--------------------------------------->
 
 
 <!---------------------------1F代码块---------------------->
