--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
 <title>精彩生活网</title>
-<link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
-<link href="css/header_footer.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/x-icon" href="images/shopping.ico" >
+<link rel="stylesheet" type="text/css" href="css/header_footer.css">
 <link rel="stylesheet" type="text/css" href="css/index.css" />
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
 <script type="text/javascript" src="js/header_footer.js"></script>
