--- a/2_health.html
+++ b/2_health.html
@@ -18,15 +18,17 @@
 </head>
 
 <body>
-<!--------------------------导航部分-------------------------->
+<!-----------------------------------Navigation----------------------------------->
+<!------顶部彩色图-------->
 <div class="header1"></div>
+<!------导航第一板块------>
 <div class="header2">
     <div class="header2a">
         <div id="hd1">
             <dl id="h1">
                 <dt>
-                    <span><img src="images/header1.png"/></span>
-                    <span><a href="#">收藏精彩生活馆</a></span>
+                    <img src="images/header1.png"/>
+                    <a href="#">收藏精彩生活馆</a>
                 </dt>
             </dl>
             <dl id="h2">
@@ -34,10 +36,10 @@
                     <span><img src="images/header2.png"/></span>
                 </dt>
                 <dt>
-                    <span><a href="#">成都市</span></a></span>
-                    <span>＞</span>
+                    <span><a href="#">成都市</a></span>
+                    <span >&gt;</span>
                     <span><a href="#">金牛区</a></span>
-                    <span id="hs1">▼</span>
+                    <span id="hs1"><img src="images/show-up.png"/></span>
                 </dt>
                 <dd>
                     <ul>
@@ -86,7 +88,6 @@
                         <li><a href="#" onClick="area(this);">其他</a></li>
                     </ul>
                 </dd>
-
             </dl>
         </div>
 
@@ -98,8 +99,8 @@
             </dl>
             <dl>
                 <dt>
-                    <span><a href="#">[请登录]</a></span>
-                    <span><a href="#">[免费注册]</a></span>
+                    <a href="#">[请登录]</a>
+                    <a href="#">[免费注册]</a>
                 </dt>
             </dl>
             <dl>
@@ -109,7 +110,7 @@
                 <dt>
                     <span><img src="images/header3.png"/></span>
                     <span><a href="#">我的账户</a></span>
-                    <span id='hs2'>▼</span>
+                    <span id='hs2'><img src="images/show-up.png"/></span>
                 </dt>
                 <dd>
                     <ul>
@@ -149,7 +150,7 @@
             <dl id='h7'>
                 <dt>
                     <span><a href="#">网站导航</a></span>
-                    <span id='hs3'>▼</span>
+                    <span id='hs3'><img src="images/show-up.png"/></span>
                 </dt>
                 <div>
                     <dt>精彩指南</dt>
@@ -159,11 +160,6 @@
                             <li><a href="#">视频购物星</a></li>
                             <li><a href="#">在线读书物</a></li>
                             <li><a href="#">装机大师</a></li>
-                        </ul>
-                    </dd>
-                    <dt>精彩指南</dt>
-                    <dd>
-                        <ul>
                             <li><a href="#">校园之星</a></li>
                             <li><a href="#">视频购物星</a></li>
                             <li><a href="#">在线读书物</a></li>
@@ -171,9 +167,24 @@
                         </ul>
                     </dd>
                     <dt>精彩指南</dt>
-                    <dd>
+                    <dd class="dtt">
                         <ul>
                             <li><a href="#">校园之星</a></li>
+                            <li><a href="#">视频购物星</a></li>
+                            <li><a href="#">在线读书物</a></li>
+                            <li><a href="#">装机大师</a></li>
+                            <li><a href="#">视频购物星</a></li>
+                            <li><a href="#">在线读书物</a></li>
+                            <li><a href="#">装机大师</a></li>
+                        </ul>
+                    </dd>
+                    <dt>精彩指南</dt>
+                    <dd class="dtt">
+                        <ul>
+                            <li><a href="#">校园之星</a></li>
+                            <li><a href="#">视频购物星</a></li>
+                            <li><a href="#">在线读书物</a></li>
+                            <li><a href="#">装机大师</a></li>
                             <li><a href="#">视频购物星</a></li>
                             <li><a href="#">在线读书物</a></li>
                             <li><a href="#">装机大师</a></li>
@@ -184,7 +195,7 @@
         </div>
     </div>
 </div>
-<!-----------------------------------------------Header------------------------------------------------->
+<!-----导航搜索板块------->
 <div id="header">
     <div class="headerLayout">
         <div class="headerCon">
@@ -205,15 +216,16 @@
                                     <div class="s-combobox-input-wrap">
                                         <input type="text" name="q" id="mq" tabindex="9" accesskey="s" autocomplete="off" autofocus="true" x-webkit-speech="" x-webkit-grammar="builtin:translate" class="s-combobox-input" role="combobox" aria-haspopup="true" title="请输入搜索文字" aria-label="请输入搜索文字">
                                     </div>
-                                    <label for="mq" class="s-combobox-placeholder" style="color: rgb(102, 102, 102); visibility: visible;">Iphone 6 plus</label>
+                                    <!--<label for="mq" class="s-combobox-placeholder" style="color: rgb(102, 102, 102); visibility: visible;">Iphone 6 plus</label>-->
                                 </div>
-                                <button type="submit"><img src="images/sou.png" width="50" height="44"></button>
+                                <button type="submit"><img src="images/sou.png" width="32" height="44"></button>
                             </div>
                         </fieldset>
                     </form>
                     <ul class="hot-query">
                         <li>热门搜索：</li>
                         <li><a href="#">大码女装</a></li>
+
                         <li class="hot-query-highlight"><a href="#">雪地靴</a></li>
                         <li><a href="#">羽绒衣</a></li>
                         <li class="hot-query-highlight"><a href="#">秋冬童装</a></li>
@@ -227,7 +239,9 @@
     </div>
 </div>
 
-<!----------------------------------------------Content-------------------------------------------------->
+<!----------------------------------Navigation-End-------------------------------->
+
+<!-------------------------------------Content------------------------------------>
 <div id="page">
   <div id="content">
     <div class="J_Layout layout grid-m">
